--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-ui": "^1.0.0-beta.41",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "serve": "^6.5.5",
     "typescript": "^2.7.2"
   },
   "devDependencies": {
