--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
     "classnames": "^2.2.5",
+    "express": "^4.16.3",
     "material-ui": "^1.0.0-beta.41",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -26,7 +27,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^4.0.0",
-    "webpack": "^4.0.1",
+    "webpack": "^4.6.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
   }
