--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "ai-chan-landing",
   "version": "0.0.1",
   "description": "React components following Microsoft's fluent design vision",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/server/index.js",
   "scripts": {
     "postinstall": "npm run compile",
     "start": "NODE_ENV=development PREFIX=! webpack-dev-server --content-base app --history-api-fallback",
@@ -22,6 +21,7 @@
     "typescript": "^2.7.2"
   },
   "devDependencies": {
+    "@types/express": "^4.11.1",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "file-loader": "^1.1.11",
