--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.11.1",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "copy-webpack-plugin": "^4.5.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^4.0.0",
