--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "npm run compile",
     "start": "NODE_ENV=development PREFIX=! webpack-dev-server --content-base app --history-api-fallback",
-    "compile": "NODE_ENV=production PREFIX=! webpack --display-error-details",
+    "compile": "npm run clean-repo && NODE_ENV=production PREFIX=! webpack --display-error-details",
+    "clean-repo": "ts-node -O '{\"module\": \"commonjs\"}' src/utility/clean-repo.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -29,6 +30,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^4.0.0",
+    "ts-node": "^6.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
